# Proj-Arbeiten

./: .gitignore  CMakeLists.txt  README.md  fix_r_rasters.c  hierarchy.c  hierarchy_v2.c
R-Scripts/: analysis_01.R  analysis_02.R  analysis_03-shortened.R  analysis_03.R  analysis_04.R  funs.R
src/: extract.c  fix_r_rasters.c  help.c  help.h  hierarchy.c  hierarchy_v2.c  mask_stack.c
